Fixed visibility taxonomy item input

--- a/src/collective/taxonomy/dynatree.ui.css
+++ b/src/collective/taxonomy/dynatree.ui.css
@@ -325,6 +325,11 @@ span.dynatree-active a
 	color: white !important; /* @ IE6 */
 }
 
+span.dynatree-active a input#editNode
+{
+    color: black !important;
+}
+
 /*******************************************************************************
  * Drag'n'drop support
  */
